Found a bug where extra newlines were added in root trees, fixed it